// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentItems tests should load the DocumentItems component 1`] = `
<Loader>
  <Error>
    <ResultsTable
      currentPage={1}
      fixed={false}
      headerActionClickHandler={null}
      headerActionComponent={null}
      name="attached items"
      paginationComponent={null}
      renderSegment={true}
      rowActionClickHandler={[Function]}
      rows={Array []}
      seeAllComponent={
        <SeeAllButton
          disabled={false}
          fluid={false}
          text="See All"
          url="/backoffice/items?q=document_pid:111"
        />
      }
      showAllResults={false}
      showMaxRows={5}
      singleLine={false}
      subtitle=""
      title="Attached items"
    />
  </Error>
</Loader>
`;

exports[`DocumentItems tests should render item 1`] = `
<DocumentItems
  data={
    Object {
      "hits": Array [
        Object {
          "ID": "1",
          "metadata": Object {
            "barcode": "123456789-1",
            "circulation_restriction": "NO_RESTRICTION",
            "document": Object {
              "title": "Document 1 title",
            },
            "document_pid": "docid-1",
            "internal_location": Object {
              "location": Object {
                "name": "Somewhere",
              },
            },
            "internal_location_pid": "ilocid-1",
            "medium": "NOT_SPECIFIED",
            "pid": "itemid-1",
            "shelf": "Shelf 1",
            "status": "MISSING",
          },
          "pid": "item1",
        },
        Object {
          "id": "2",
          "metadata": Object {
            "barcode": "123456789-2",
            "circulation_restriction": "NO_RESTRICTION",
            "document": Object {
              "title": "Document 2 title",
            },
            "document_pid": "docid-1",
            "internal_location": Object {
              "location": Object {
                "name": "Somewhere Else",
              },
            },
            "internal_location_pid": "ilocid-2",
            "medium": "NOT_SPECIFIED",
            "pid": "itemid-2",
            "shelf": "Shelf 2",
            "status": "CAN_CIRCULATE",
          },
          "pid": "item2",
        },
      ],
      "total": 2,
    }
  }
  document={
    Object {
      "metadata": Object {
        "pid": 111,
      },
      "pid": 111,
    }
  }
  fetchDocumentItems={[Function]}
  showMaxItems={5}
>
  <Loader>
    <Error>
      <ResultsTable
        currentPage={1}
        fixed={false}
        headerActionClickHandler={null}
        headerActionComponent={null}
        name="attached items"
        paginationComponent={null}
        renderSegment={true}
        rowActionClickHandler={[Function]}
        rows={
          Array [
            Object {
              "Barcode": "123456789-1",
              "ID": "item1",
              "Location": "Somewhere",
              "Medium": "NOT_SPECIFIED",
              "Shelf": "Shelf 1",
              "Status": "MISSING",
            },
            Object {
              "Barcode": "123456789-2",
              "ID": "item2",
              "Location": "Somewhere Else",
              "Medium": "NOT_SPECIFIED",
              "Shelf": "Shelf 2",
              "Status": "CAN_CIRCULATE",
            },
          ]
        }
        seeAllComponent={
          <SeeAllButton
            clickHandler={[Function]}
            disabled={false}
            fluid={false}
          />
        }
        showAllResults={false}
        showMaxRows={5}
        singleLine={false}
        subtitle=""
        title="Attached items"
      >
        <Segment>
          <div
            className="ui segment"
          >
            <Grid>
              <div
                className="ui grid"
              >
                <GridRow>
                  <div
                    className="row"
                  >
                    <GridColumn
                      verticalAlign="middle"
                      width={16}
                    >
                      <div
                        className="middle aligned sixteen wide column"
                      >
                        <Header
                          as="h3"
                          content="Attached items"
                          subheader=""
                        >
                          <h3
                            className="ui header"
                          >
                            Attached items
                            <HeaderSubheader
                              content=""
                            >
                              <div
                                className="sub header"
                              />
                            </HeaderSubheader>
                          </h3>
                        </Header>
                      </div>
                    </GridColumn>
                    <GridColumn
                      textAlign="right"
                      width={8}
                    >
                      <div
                        className="right aligned eight wide column"
                      />
                    </GridColumn>
                  </div>
                </GridRow>
              </div>
            </Grid>
            <Table
              as="table"
              compact={true}
              selectable={true}
              striped={true}
            >
              <table
                className="ui selectable striped compact table"
              >
                <ResultsTableHeader
                  columns={
                    Array [
                      "ID",
                      "Barcode",
                      "Status",
                      "Medium",
                      "Location",
                      "Shelf",
                    ]
                  }
                  withRowAction={false}
                >
                  <TableHeader
                    as="thead"
                  >
                    <thead
                      className=""
                    >
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="header"
                      >
                        <tr
                          className=""
                          data-test="header"
                        >
                          <TableHeaderCell
                            as="th"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              />
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="ID"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                ID
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Barcode"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Barcode
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Status"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Status
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Medium"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Medium
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Location"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Location
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Shelf"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Shelf
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                        </tr>
                      </TableRow>
                    </thead>
                  </TableHeader>
                </ResultsTableHeader>
                <ResultsTableBody
                  columns={
                    Array [
                      "ID",
                      "Barcode",
                      "Status",
                      "Medium",
                      "Location",
                      "Shelf",
                    ]
                  }
                  rowActionClickHandler={[Function]}
                  rows={
                    Array [
                      Object {
                        "Barcode": "123456789-1",
                        "ID": "item1",
                        "Location": "Somewhere",
                        "Medium": "NOT_SPECIFIED",
                        "Shelf": "Shelf 1",
                        "Status": "MISSING",
                      },
                      Object {
                        "Barcode": "123456789-2",
                        "ID": "item2",
                        "Location": "Somewhere Else",
                        "Medium": "NOT_SPECIFIED",
                        "Shelf": "Shelf 2",
                        "Status": "CAN_CIRCULATE",
                      },
                    ]
                  }
                >
                  <TableBody
                    as="tbody"
                  >
                    <tbody
                      className=""
                    >
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="item1"
                        key="item1"
                      >
                        <tr
                          className=""
                          data-test="item1"
                        >
                          <TableCell
                            as="td"
                            textAlign="center"
                          >
                            <td
                              className="center aligned"
                            >
                              <Button
                                as="button"
                                compact={true}
                                data-test="btn-view-details-item1"
                                icon="info"
                                onClick={[Function]}
                              >
                                <Ref
                                  innerRef={
                                    Object {
                                      "current": <button
                                        class="ui compact icon button"
                                        data-test="btn-view-details-item1"
                                      >
                                        <i
                                          aria-hidden="true"
                                          class="info icon"
                                        />
                                      </button>,
                                    }
                                  }
                                >
                                  <RefFindNode
                                    innerRef={
                                      Object {
                                        "current": <button
                                          class="ui compact icon button"
                                          data-test="btn-view-details-item1"
                                        >
                                          <i
                                            aria-hidden="true"
                                            class="info icon"
                                          />
                                        </button>,
                                      }
                                    }
                                  >
                                    <button
                                      className="ui compact icon button"
                                      data-test="btn-view-details-item1"
                                      onClick={[Function]}
                                    >
                                      <Icon
                                        as="i"
                                        name="info"
                                      >
                                        <i
                                          aria-hidden="true"
                                          className="info icon"
                                          onClick={[Function]}
                                        />
                                      </Icon>
                                    </button>
                                  </RefFindNode>
                                </Ref>
                              </Button>
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="ID-item1"
                            key="0-item1"
                          >
                            <td
                              className=""
                              data-test="ID-item1"
                            >
                              item1
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Barcode-item1"
                            key="1-item1"
                          >
                            <td
                              className=""
                              data-test="Barcode-item1"
                            >
                              123456789-1
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Status-item1"
                            key="2-item1"
                          >
                            <td
                              className=""
                              data-test="Status-item1"
                            >
                              MISSING
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Medium-item1"
                            key="3-item1"
                          >
                            <td
                              className=""
                              data-test="Medium-item1"
                            >
                              NOT_SPECIFIED
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Location-item1"
                            key="4-item1"
                          >
                            <td
                              className=""
                              data-test="Location-item1"
                            >
                              Somewhere
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Shelf-item1"
                            key="5-item1"
                          >
                            <td
                              className=""
                              data-test="Shelf-item1"
                            >
                              Shelf 1
                            </td>
                          </TableCell>
                        </tr>
                      </TableRow>
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="item2"
                        key="item2"
                      >
                        <tr
                          className=""
                          data-test="item2"
                        >
                          <TableCell
                            as="td"
                            textAlign="center"
                          >
                            <td
                              className="center aligned"
                            >
                              <Button
                                as="button"
                                compact={true}
                                data-test="btn-view-details-item2"
                                icon="info"
                                onClick={[Function]}
                              >
                                <Ref
                                  innerRef={
                                    Object {
                                      "current": <button
                                        class="ui compact icon button"
                                        data-test="btn-view-details-item2"
                                      >
                                        <i
                                          aria-hidden="true"
                                          class="info icon"
                                        />
                                      </button>,
                                    }
                                  }
                                >
                                  <RefFindNode
                                    innerRef={
                                      Object {
                                        "current": <button
                                          class="ui compact icon button"
                                          data-test="btn-view-details-item2"
                                        >
                                          <i
                                            aria-hidden="true"
                                            class="info icon"
                                          />
                                        </button>,
                                      }
                                    }
                                  >
                                    <button
                                      className="ui compact icon button"
                                      data-test="btn-view-details-item2"
                                      onClick={[Function]}
                                    >
                                      <Icon
                                        as="i"
                                        name="info"
                                      >
                                        <i
                                          aria-hidden="true"
                                          className="info icon"
                                          onClick={[Function]}
                                        />
                                      </Icon>
                                    </button>
                                  </RefFindNode>
                                </Ref>
                              </Button>
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="ID-item2"
                            key="0-item2"
                          >
                            <td
                              className=""
                              data-test="ID-item2"
                            >
                              item2
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Barcode-item2"
                            key="1-item2"
                          >
                            <td
                              className=""
                              data-test="Barcode-item2"
                            >
                              123456789-2
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Status-item2"
                            key="2-item2"
                          >
                            <td
                              className=""
                              data-test="Status-item2"
                            >
                              CAN_CIRCULATE
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Medium-item2"
                            key="3-item2"
                          >
                            <td
                              className=""
                              data-test="Medium-item2"
                            >
                              NOT_SPECIFIED
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Location-item2"
                            key="4-item2"
                          >
                            <td
                              className=""
                              data-test="Location-item2"
                            >
                              Somewhere Else
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Shelf-item2"
                            key="5-item2"
                          >
                            <td
                              className=""
                              data-test="Shelf-item2"
                            >
                              Shelf 2
                            </td>
                          </TableCell>
                        </tr>
                      </TableRow>
                    </tbody>
                  </TableBody>
                </ResultsTableBody>
                <ResultsTableFooter
                  allRowsNumber={2}
                  columnsNumber={6}
                  currentPage={1}
                  paginationComponent={null}
                  seeAllComponent={
                    <SeeAllButton
                      clickHandler={[Function]}
                      disabled={false}
                      fluid={false}
                    />
                  }
                  showAllResults={false}
                  showMaxRows={5}
                />
              </table>
            </Table>
          </div>
        </Segment>
      </ResultsTable>
    </Error>
  </Loader>
</DocumentItems>
`;

exports[`DocumentItems tests should render show a message with no items 1`] = `
<DocumentItems
  data={
    Object {
      "hits": Array [],
      "total": 0,
    }
  }
  document={
    Object {
      "metadata": Object {
        "pid": 111,
      },
      "pid": 111,
    }
  }
  fetchDocumentItems={[Function]}
  showMaxItems={5}
>
  <Loader>
    <Error>
      <ResultsTable
        currentPage={1}
        fixed={false}
        headerActionClickHandler={null}
        headerActionComponent={null}
        name="attached items"
        paginationComponent={null}
        renderSegment={true}
        rowActionClickHandler={[Function]}
        rows={Array []}
        seeAllComponent={
          <SeeAllButton
            disabled={false}
            fluid={false}
            text="See All"
            url="/backoffice/items?q=document_pid:111"
          />
        }
        showAllResults={false}
        showMaxRows={5}
        singleLine={false}
        subtitle=""
        title="Attached items"
      >
        <Segment>
          <div
            className="ui segment"
          >
            <Grid>
              <div
                className="ui grid"
              >
                <GridRow>
                  <div
                    className="row"
                  >
                    <GridColumn
                      verticalAlign="middle"
                      width={16}
                    >
                      <div
                        className="middle aligned sixteen wide column"
                      >
                        <Header
                          as="h3"
                          content="Attached items"
                          subheader=""
                        >
                          <h3
                            className="ui header"
                          >
                            Attached items
                            <HeaderSubheader
                              content=""
                            >
                              <div
                                className="sub header"
                              />
                            </HeaderSubheader>
                          </h3>
                        </Header>
                      </div>
                    </GridColumn>
                    <GridColumn
                      textAlign="right"
                      width={8}
                    >
                      <div
                        className="right aligned eight wide column"
                      />
                    </GridColumn>
                  </div>
                </GridRow>
              </div>
            </Grid>
            <Message
              data-test="no-results"
            >
              <div
                className="ui message"
                data-test="no-results"
              >
                There are no 
                attached items
                .
              </div>
            </Message>
          </div>
        </Segment>
      </ResultsTable>
    </Error>
  </Loader>
</DocumentItems>
`;

exports[`DocumentItems tests should render the see all button when showing only a few items 1`] = `
<DocumentItems
  data={
    Object {
      "hits": Array [
        Object {
          "ID": "1",
          "metadata": Object {
            "barcode": "123456789-1",
            "circulation_restriction": "NO_RESTRICTION",
            "document": Object {
              "title": "Document 1 title",
            },
            "document_pid": "docid-1",
            "internal_location": Object {
              "location": Object {
                "name": "Somewhere",
              },
            },
            "internal_location_pid": "ilocid-1",
            "medium": "NOT_SPECIFIED",
            "pid": "itemid-1",
            "shelf": "Shelf 1",
            "status": "MISSING",
          },
          "pid": "item1",
        },
        Object {
          "id": "2",
          "metadata": Object {
            "barcode": "123456789-2",
            "circulation_restriction": "NO_RESTRICTION",
            "document": Object {
              "title": "Document 2 title",
            },
            "document_pid": "docid-1",
            "internal_location": Object {
              "location": Object {
                "name": "Somewhere Else",
              },
            },
            "internal_location_pid": "ilocid-2",
            "medium": "NOT_SPECIFIED",
            "pid": "itemid-2",
            "shelf": "Shelf 2",
            "status": "CAN_CIRCULATE",
          },
          "pid": "item2",
        },
      ],
      "total": 2,
    }
  }
  document={
    Object {
      "metadata": Object {
        "pid": 111,
      },
      "pid": 111,
    }
  }
  fetchDocumentItems={[Function]}
  showMaxItems={1}
>
  <Loader>
    <Error>
      <ResultsTable
        currentPage={1}
        fixed={false}
        headerActionClickHandler={null}
        headerActionComponent={null}
        name="attached items"
        paginationComponent={null}
        renderSegment={true}
        rowActionClickHandler={[Function]}
        rows={
          Array [
            Object {
              "Barcode": "123456789-1",
              "ID": "item1",
              "Location": "Somewhere",
              "Medium": "NOT_SPECIFIED",
              "Shelf": "Shelf 1",
              "Status": "MISSING",
            },
            Object {
              "Barcode": "123456789-2",
              "ID": "item2",
              "Location": "Somewhere Else",
              "Medium": "NOT_SPECIFIED",
              "Shelf": "Shelf 2",
              "Status": "CAN_CIRCULATE",
            },
          ]
        }
        seeAllComponent={
          <SeeAllButton
            clickHandler={[Function]}
            disabled={false}
            fluid={false}
          />
        }
        showAllResults={false}
        showMaxRows={1}
        singleLine={false}
        subtitle=""
        title="Attached items"
      >
        <Segment>
          <div
            className="ui segment"
          >
            <Grid>
              <div
                className="ui grid"
              >
                <GridRow>
                  <div
                    className="row"
                  >
                    <GridColumn
                      verticalAlign="middle"
                      width={16}
                    >
                      <div
                        className="middle aligned sixteen wide column"
                      >
                        <Header
                          as="h3"
                          content="Attached items"
                          subheader=""
                        >
                          <h3
                            className="ui header"
                          >
                            Attached items
                            <HeaderSubheader
                              content=""
                            >
                              <div
                                className="sub header"
                              />
                            </HeaderSubheader>
                          </h3>
                        </Header>
                      </div>
                    </GridColumn>
                    <GridColumn
                      textAlign="right"
                      width={8}
                    >
                      <div
                        className="right aligned eight wide column"
                      />
                    </GridColumn>
                  </div>
                </GridRow>
              </div>
            </Grid>
            <Table
              as="table"
              compact={true}
              selectable={true}
              striped={true}
            >
              <table
                className="ui selectable striped compact table"
              >
                <ResultsTableHeader
                  columns={
                    Array [
                      "ID",
                      "Barcode",
                      "Status",
                      "Medium",
                      "Location",
                      "Shelf",
                    ]
                  }
                  withRowAction={false}
                >
                  <TableHeader
                    as="thead"
                  >
                    <thead
                      className=""
                    >
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="header"
                      >
                        <tr
                          className=""
                          data-test="header"
                        >
                          <TableHeaderCell
                            as="th"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              />
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="ID"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                ID
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Barcode"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Barcode
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Status"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Status
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Medium"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Medium
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Location"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Location
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Shelf"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Shelf
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                        </tr>
                      </TableRow>
                    </thead>
                  </TableHeader>
                </ResultsTableHeader>
                <ResultsTableBody
                  columns={
                    Array [
                      "ID",
                      "Barcode",
                      "Status",
                      "Medium",
                      "Location",
                      "Shelf",
                    ]
                  }
                  rowActionClickHandler={[Function]}
                  rows={
                    Array [
                      Object {
                        "Barcode": "123456789-1",
                        "ID": "item1",
                        "Location": "Somewhere",
                        "Medium": "NOT_SPECIFIED",
                        "Shelf": "Shelf 1",
                        "Status": "MISSING",
                      },
                    ]
                  }
                >
                  <TableBody
                    as="tbody"
                  >
                    <tbody
                      className=""
                    >
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="item1"
                        key="item1"
                      >
                        <tr
                          className=""
                          data-test="item1"
                        >
                          <TableCell
                            as="td"
                            textAlign="center"
                          >
                            <td
                              className="center aligned"
                            >
                              <Button
                                as="button"
                                compact={true}
                                data-test="btn-view-details-item1"
                                icon="info"
                                onClick={[Function]}
                              >
                                <Ref
                                  innerRef={
                                    Object {
                                      "current": <button
                                        class="ui compact icon button"
                                        data-test="btn-view-details-item1"
                                      >
                                        <i
                                          aria-hidden="true"
                                          class="info icon"
                                        />
                                      </button>,
                                    }
                                  }
                                >
                                  <RefFindNode
                                    innerRef={
                                      Object {
                                        "current": <button
                                          class="ui compact icon button"
                                          data-test="btn-view-details-item1"
                                        >
                                          <i
                                            aria-hidden="true"
                                            class="info icon"
                                          />
                                        </button>,
                                      }
                                    }
                                  >
                                    <button
                                      className="ui compact icon button"
                                      data-test="btn-view-details-item1"
                                      onClick={[Function]}
                                    >
                                      <Icon
                                        as="i"
                                        name="info"
                                      >
                                        <i
                                          aria-hidden="true"
                                          className="info icon"
                                          onClick={[Function]}
                                        />
                                      </Icon>
                                    </button>
                                  </RefFindNode>
                                </Ref>
                              </Button>
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="ID-item1"
                            key="0-item1"
                          >
                            <td
                              className=""
                              data-test="ID-item1"
                            >
                              item1
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Barcode-item1"
                            key="1-item1"
                          >
                            <td
                              className=""
                              data-test="Barcode-item1"
                            >
                              123456789-1
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Status-item1"
                            key="2-item1"
                          >
                            <td
                              className=""
                              data-test="Status-item1"
                            >
                              MISSING
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Medium-item1"
                            key="3-item1"
                          >
                            <td
                              className=""
                              data-test="Medium-item1"
                            >
                              NOT_SPECIFIED
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Location-item1"
                            key="4-item1"
                          >
                            <td
                              className=""
                              data-test="Location-item1"
                            >
                              Somewhere
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Shelf-item1"
                            key="5-item1"
                          >
                            <td
                              className=""
                              data-test="Shelf-item1"
                            >
                              Shelf 1
                            </td>
                          </TableCell>
                        </tr>
                      </TableRow>
                    </tbody>
                  </TableBody>
                </ResultsTableBody>
                <ResultsTableFooter
                  allRowsNumber={2}
                  columnsNumber={6}
                  currentPage={1}
                  paginationComponent={null}
                  seeAllComponent={
                    <SeeAllButton
                      clickHandler={[Function]}
                      disabled={false}
                      fluid={false}
                    />
                  }
                  showAllResults={false}
                  showMaxRows={1}
                >
                  <TableFooter
                    as="tfoot"
                    data-test="footer"
                    fullWidth={true}
                  >
                    <TableHeader
                      as="tfoot"
                      data-test="footer"
                      fullWidth={true}
                    >
                      <tfoot
                        className="full-width"
                        data-test="footer"
                      >
                        <TableRow
                          as="tr"
                          cellAs="td"
                        >
                          <tr
                            className=""
                          >
                            <TableHeaderCell
                              as="th"
                              colSpan={7}
                              textAlign="right"
                            >
                              <TableCell
                                as="th"
                                className=""
                                colSpan={7}
                                textAlign="right"
                              >
                                <th
                                  className="right aligned"
                                  colSpan={7}
                                >
                                  <span>
                                    Showing entries 
                                    1
                                    -
                                    1
                                     of 
                                    2
                                     
                                  </span>
                                  <span>
                                    <SeeAllButton
                                      clickHandler={[Function]}
                                      disabled={false}
                                      fluid={false}
                                    >
                                      <Button
                                        as="button"
                                        onClick={[Function]}
                                        size="tiny"
                                      >
                                        <Ref
                                          innerRef={
                                            Object {
                                              "current": <button
                                                class="ui tiny button"
                                              >
                                                See all
                                              </button>,
                                            }
                                          }
                                        >
                                          <RefFindNode
                                            innerRef={
                                              Object {
                                                "current": <button
                                                  class="ui tiny button"
                                                >
                                                  See all
                                                </button>,
                                              }
                                            }
                                          >
                                            <button
                                              className="ui tiny button"
                                              onClick={[Function]}
                                            >
                                              See all
                                            </button>
                                          </RefFindNode>
                                        </Ref>
                                      </Button>
                                    </SeeAllButton>
                                  </span>
                                  <span />
                                </th>
                              </TableCell>
                            </TableHeaderCell>
                          </tr>
                        </TableRow>
                      </tfoot>
                    </TableHeader>
                  </TableFooter>
                </ResultsTableFooter>
              </table>
            </Table>
          </div>
        </Segment>
      </ResultsTable>
    </Error>
  </Loader>
</DocumentItems>
`;
